standalone-configs/ingressroutes/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.app.homelab.me`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik
      port: 9000
  tls:
    secretName: traefik-tls
