standalone-configs/ingressroutes/uptimekuma-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-dashboard-ingress
  namespace: monitoring 
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`uptimekuma.app.homelab.me`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: uptime-kuma  
      port: 3001     
  tls:
    secretName: monitoring-tls  # 引用证书 Secret（需与 cert-manager 创建的 Secret 名称一致)
